# pyscan

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml
architecture/: ARCH_MANIFEST.md
benchmarks/: README.md  benchmark_report.json  gen_graph.sh  run_benchmarks.sh  small.txt
benchmarks/assets/: gen.js  gen_readme.js  package-lock.json  package.json
src/: error.rs  main.rs  utils.rs
src/display/: card.rs  diagnostic.rs  mod.rs  progress.rs  table.rs  theme.rs
src/docker/: mod.rs
src/parser/: extractor.rs  mod.rs  structs.rs
src/scanner/: api.rs  mod.rs  models.rs
