[package]
name = "pyscan"
version = "2.1.0"
edition = "2021"
authors = ["Aswin S <aswindebug@gmail.com>"]
license = "MIT"
description = "python dependency vulnerability scanner"
readme = "README.md"
homepage = "https://github.com/ohaswin/pyscan"
repository = "https://github.com/ohaswin/pyscan"
keywords = ["cli", "python", "security", "vulnerability", "pentesting"]
categories = ["command-line-utilities"]


[dependencies]
# --- Rich CLI ---
comfy-table = "7"
indicatif = "0.17"
miette = { version = "7", features = ["fancy"] }
is-terminal = "0.4"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
pep-508 = "0.5.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.160", features = ["derive", "serde_derive"] }
serde_json = "1.0.96"
thiserror = "2"
toml = "0.7.3"
lenient_semver = { version = "0.4.2", features = ["version_semver"] }
semver = "1.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
futures = "0.3.28"
dirs = "6.0.0"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
